# ChangeLog for media-video/mplayer-uau
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*mplayer-uau-1.0_rc4_p20101220 (25 Dec 2010)

  25 Dec 2010; Nikoli <nikoli@lavabit.com>
  +mplayer-uau-1.0_rc4_p20101220.ebuild:
  new snapshot

  25 Dec 2010; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
  set version in archive

*mplayer-uau-1.0_rc4_p20101126 (06 Dec 2010)

  06 Dec 2010; Nikoli <nikoli@lavabit.com>
  +mplayer-uau-1.0_rc4_p20101126.ebuild:
  add snapshot

  15 Nov 2010; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild,
  metadata.xml:
  update, sync with mplayer from portage

*mplayer-uau-1.0_rc4_p20100822 (26 Aug 2010)

  26 Aug 2010; Nikoli <nikoli@lavabit.com>
  +mplayer-uau-1.0_rc4_p20100822.ebuild:
  add snapshot

  22 Aug 2010; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
  fix src_unpack, remove USE svga, sync with mplayer-9999

  17 Jun 2010; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
  fixed src_unpack, configure; added USE threads, cosmetics

  16 Jun 2010; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
  USE="external-ffmpeg" now builds with >=ffmpeg-0.6

  13 Jun 2010; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
  fix use symlink && use !encode

*mplayer-uau-9999 (10 Jun 2010)

  10 Jun 2010; Nikoli <nikoli@lavabit.com> +mplayer-uau-9999.ebuild,
  +metadata.xml:
  Initial ebuild
