@@ -7,6 +7,6 @@ DIST mplayer-uau-1.0_rc4_p20101220.tar.xz 7258544 RMD160 c78772012d887fbac00de2b
 EBUILD mplayer-uau-1.0_rc4_p20100822.ebuild 23583 RMD160 2d0df508d912e7587fe61b816e2ab418f89ea32a SHA1 d7d057ca95276e370de18e61767033922dc559f8 SHA256 a884674e4da716f691ca1443de2e8bdcb0d4a76a7898dfe395095a4ed2c6563f
 EBUILD mplayer-uau-1.0_rc4_p20101126.ebuild 23645 RMD160 64e49ca062db2b32e82944bda06fb26b6be8c7cb SHA1 274ec552e1652eff2a01f124f74774be2042d8d1 SHA256 9952bbfedab8df63547ab0ca0a0df214fa56015297a8ade25aa53955968578dc
 EBUILD mplayer-uau-1.0_rc4_p20101220.ebuild 23441 RMD160 a098eed6bc656e1e15978aa61f5558a126e5c5f0 SHA1 41491e9796ba2d6b963de169a1ea67b1f2e8cae5 SHA256 fc0c1c31eb208d848891e6eb35847022c13b32350910018a0a8147643e73e669
-EBUILD mplayer-uau-9999.ebuild 23416 RMD160 665e1023eed11ae9d0e06449ff42c2457aba1f82 SHA1 c0f75102d5451baae31bcc5f8d49b51353941216 SHA256 1f0e62cfdd67130b4460ab29982ef89bf844e71cdf214a0f3f37edc6c4d95ef7
-MISC ChangeLog 1399 RMD160 2e9060e59139e2de22738352689a2b0ca846f8db SHA1 fd4ffad63d855a7087b9f1e864bfa54638feda22 SHA256 788970a33f05495ea058391450cc17d64b76a16b35dd5eb5d57512bdd8bbd878
+EBUILD mplayer-uau-9999.ebuild 23366 RMD160 ff6836bccd17a9ff6c8020d176660eeb3b2f1f9d SHA1 df03ecd191f5d508df1a69c4747299d24919e33c SHA256 2b0691b160410c0ddb32e02f7e815b24ae4ac96a4dd5534ef09f543f64d85004
+MISC ChangeLog 1499 RMD160 51b71a24a2276cf9f93df93fa5ecf59bfe4626a0 SHA1 10086d2057c89b8dfd4f623884d90ae89d8c45f7 SHA256 cf248be7f18660df3c29d5d6953725020078d462d0497ad376ba3390f03bed38
 MISC metadata.xml 4739 RMD160 e2f1220571f2fb983fa04408190449b75a346b6b SHA1 eaf3e0b5ff1b9759b6d4e7233b2f57f42e360bb6 SHA256 5c818b4e3898a2d0d5a8b833f3bab6c15bdd121a10b55c6e1a6e9f34f7e514a4
