@@ -1,6 +1,9 @@
 # ChangeLog for media-video/mplayer-uau
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Jan 2011; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
+  fix build, sync with portage
 
 *mplayer-uau-1.0_rc4_p20101220 (25 Dec 2010)
 
